# airlock

./: .gitignore  Cargo.toml  README.md  airlock.toml
.github/workflows/: ci.yml
docs/: dependencies-installed.md  pitfalls.md  roadmap.md
docs/decisions/: 0001-architecture-and-trust-model.md  0002-host-integration.md
src/: auth.rs  checkpoint.rs  cli.rs  config.rs  error.rs  fleet.rs  image.rs  lib.rs  main.rs  names.rs  paths.rs  ports.rs  secrets.rs  smolvm.rs  ssh.rs  toolchains.rs
